# bluesound-controller

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  cli.py  config.py  constants.py  controller.py  install.sh  keychain.py  lsdp.py  main.py  models.py  network.py  pyproject.toml  pytest.ini  release-please-config.json  requirements-test.txt  requirements.txt  smoke_test.py  utils.py  validators.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  lint.yml  test.yml
docs/: API_VERIFICATION.md  AUDIT_REPORT.md  EVALUATION_REPORT.md  FEATURE_PROPOSALS.md  PRODUCTION_READINESS.md  README-DETAILED.md  REFACTORING_RECOMMENDATIONS.md  REFACTORING_SUMMARY.md  TESTING_SUMMARY.md
tests/: README.md  __init__.py  conftest.py  test_cli_commands.py  test_cli_coverage.py  test_cli_multi_device.py  test_config.py  test_controller.py  test_controller_coverage.py  test_controller_discovery.py  test_controller_new_features.py  test_controller_sync.py  test_controller_xml.py  test_integration.py  test_keychain.py  test_lsdp.py  test_lsdp_comprehensive.py  test_main.py  test_main_coverage.py  test_network.py  test_utils.py  test_utils_comprehensive.py  test_utils_retry.py  test_validators.py
